cmake_minimum_required(VERSION 2.8)
PROJECT (Depth)
SET(CMAKE_CXX_COMPILER "mpicxx")
SET(CMAKE_CXX_FLAGS "-cxx=icpc -std=c++0x -O2 -fp-model precise -fp-model source")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}")
SET(MULTITHREADED_BUILD 4)
FILE(GLOB Depth_src "${CMAKE_SOURCE_DIR}/src/*.cpp")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/")
ADD_LIBRARY(Depth STATIC ${Depth_src})
