cmake_minimum_required(VERSION 2.8)
PROJECT (RMC)
SET(CMAKE_CXX_COMPILER "mpicxx")
SET(CMAKE_CXX_FLAGS "-cxx=icpc -std=c++0x -O2 -fp-model precise -fp-model source")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}")
SET(MULTITHREADED_BUILD 8)
FILE(GLOB RMC_src "${CMAKE_SOURCE_DIR}/src/*.cpp")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/../Depth/src/")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/../external_libraries/libpng/")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/../external_libraries/boost/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/../Depth/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/../external_libraries/libpng/")

ADD_EXECUTABLE(RMC ${RMC_src})
TARGET_LINK_LIBRARIES(RMC Depth)
TARGET_LINK_LIBRARIES(RMC libpng.a)
TARGET_LINK_LIBRARIES(RMC libz.a)
